# SipSupService

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  vcpkg.json
config/: SipSupService.conf  conf.ini
docs/: pjsip.md
include/: EC_thread.h  common.h  config_reader.h  embedded_controller_thread.h  global_controller.h  log_manager.h  sip_core.h  sip_define.h  sip_local_config.h  thread_pool.h
src/: EC_thread.cpp  config_reader.cpp  embedded_controller_thread.cpp  global_controller.cpp  main.cpp  sip_core.cpp  sip_local_config.cpp  thread_pool.cpp
test/: test.ini  test_config_reader.cpp
